--- a/test.org
+++ b/test.org
@@ -1,4 +1,5 @@
 * Test
+  CLOCK: [2022-12-06 Tue 23:39]--[2022-12-06 Tue 23:39] =>  0:00
   CLOCK: [2014-07-02 Wed 18:10]--[2014-07-03 Thu 15:00] => 20:50
   CLOCK: [2014-07-02 Wed 18:10]--[2014-07-02 Wed 18:10] =>  0:00
   CLOCK: [2014-07-02 Wed 18:10]--[2014-07-02 Wed 18:10] =>  0:00
@@ -6,5 +7,6 @@
   CLOCK: [2014-07-02 Wed 18:10]--[2014-07-02 Wed 18:10] =>  0:00
   CLOCK: [2014-07-02 Wed 18:08]--[2014-07-02 Wed 18:09] =>  0:01
 * Hej
+  CLOCK: [2022-12-06 Tue 23:39]--[2022-12-06 Tue 23:40] =>  0:01
   CLOCK: [2014-07-03 Thu 15:00]--[2014-07-03 Thu 15:00] =>  0:00
   CLOCK: [2014-07-02 Wed 18:09]--[2014-07-02 Wed 18:10] =>  0:01
